# sfmolina.github.io

./: .gitignore
docs/: index.html  sfmolina-personal-page-155321229c7731a9.js  sfmolina-personal-page-155321229c7731a9_bg.wasm  sfmolina-personal-page-39c578ac5e30b2d0_bg.wasm  sfmolina-personal-page-5a14bb11d733f5cb.js  sfmolina-personal-page-5a14bb11d733f5cb_bg.wasm  sfmolina-personal-page-633cecaa9c8228c.js  sfmolina-personal-page-633cecaa9c8228c_bg.wasm  sfmolina-personal-page-70dd6f402051292d.js  sfmolina-personal-page-70dd6f402051292d_bg.wasm  sfmolina-personal-page-97c64ed5ea85ea72.js  sfmolina-personal-page-97c64ed5ea85ea72_bg.wasm  sfmolina-personal-page-9ce9b671fbfcc425.js  sfmolina-personal-page-9ce9b671fbfcc425_bg.wasm  sfmolina-personal-page-cf54ad3fd76e80d6_bg.wasm  styles-20e16efec85ea066.css  styles-7eab6b79b99a6ea1.css  styles-c29a1bdc892759e1.css  styles-d8eb2b559b26c318.css
docs/snippets/sfmolina-personal-page-8932d4c58286d8d9/: inline0.js
sfmolina-personal-page/: Cargo.toml  index.html  styles.scss
sfmolina-personal-page/src/: app.rs  global_ctx.rs  main.rs  router.rs  translations.rs
sfmolina-personal-page/src/components/: about_me.rs  echart_demo.rs  mod.rs  nav_bar.rs  projects.rs  super_tres.rs
