[package]
name = "sfmolina-personal-page"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-net = "0.6.0"
serde = { version = "1.0.210", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
tokio = "1.40.0"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
web-sys = "0.3.72"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
